--- a/react-app/src/components/SmallSideBar/app.css
+++ b/react-app/src/components/SmallSideBar/app.css
@@ -1,3 +1,11 @@
 .logo-img {
     width: 150px;
 }
+.logo-cont {
+    background-color: green;
+    height: 65px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
