--- a/react-app/src/app.css
+++ b/react-app/src/app.css
@@ -25,7 +25,7 @@
     /* display: none; */
   }
   .navigation {
-    border-bottom: .5px solid rgba(105, 105, 105, 0.411);
+    /* border-bottom: .5px solid rgba(105, 105, 105, 0.411); */
   }
   
   
