--- a/react-app/src/components/AllInterviewContainer/app.css
+++ b/react-app/src/components/AllInterviewContainer/app.css
@@ -26,7 +26,7 @@
     
 }
 .allInt-com-letter {
-    background-color: blue;
+    background-color: #4361ee;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,6 +34,7 @@
     color: white;
     font-weight: 900;
     border-radius: 3px;
+    height: 40px;
 }  
 .allInt-btm-container {
     /* background-color: blue; */
