--- a/react-app/src/components/AllInterviewContainer/app.css
+++ b/react-app/src/components/AllInterviewContainer/app.css
@@ -23,7 +23,7 @@
     display: grid;
     grid-template-columns: .5fr 2fr;
     padding: 10px;
-    border-bottom: 0.5px solid grey;
+    border-bottom: 0.5px solid rgba(128, 128, 128, 0.325);
     
 }
 .allInt-com-letter {
