--- a/react-app/src/components/InterviewForm/app.css
+++ b/react-app/src/components/InterviewForm/app.css
@@ -8,6 +8,7 @@
     /* background-color: red; */
     box-sizing: border-box;
     background-color: white;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .cre-int-heading {
