--- a/react-app/src/components/AllInterviewContainer/app.css
+++ b/react-app/src/components/AllInterviewContainer/app.css
@@ -49,6 +49,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    letter-spacing: 1px;
 }
 .allInt-btm-left-cont {
     /* background-color: yellow; */
@@ -67,6 +68,7 @@
 .allInt-loc-text {
     /* background-color: teal; */
     margin-bottom: 5px;
+    letter-spacing: 1px;
 } 
 .allInt-loc-logo {
      /* padding-top: 3px; */
@@ -94,6 +96,7 @@
     /* background-color: blue; */
     margin-top: 10px;
     width: 150px;
+    letter-spacing: 1px;
     
     
 }
@@ -105,6 +108,7 @@
     width: 40px;
     height: 21px;
     border-radius: 2px;
+    letter-spacing: 1px;
     /* color: white; */
     /* background-color: black; */
     /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
@@ -124,7 +128,7 @@
 }
 
 .allInt-edit-btn {
-    background-color:#99d98c ;
+    background-color:#5dc847 ;
     height: 21px;
     /* background-color: #4361ee; */
     font-size: 10px;
@@ -145,22 +149,35 @@
     background-color: #deaaff;
 
     font-size: 9px;
-    width: 55px;
+    width: 75px;
     padding: 3px;
     border-radius: 2px;
     margin-top: 5px;
     color:white ;
     text-align: center;
+    letter-spacing: 1px;
 }
 .allInt-Scheduled {
-    background-color: #70e000;
+    background-color: #06d6a0;
     font-size: 9px;
-    width: 55px;
+    width: 75px;
     padding: 3px;
     border-radius: 2px;
     margin-top: 5px;
     color:white ;
     text-align: center;
+    letter-spacing: 1px;
+}
+.allInt-Declined {
+    background-color: #ef233c;
+    font-size: 9px;
+    width: 75px;
+    padding: 3px;
+    border-radius: 2px;
+    margin-top: 5px;
+    color:white ;
+    text-align: center;
+    letter-spacing: 1px;
 }
 
 .allInt-date {
@@ -216,6 +233,9 @@
     border-radius: 3px;
 
     
+}
+.allInt-loc-type-cont p {
+    letter-spacing: 1px;
 }
 
 
