--- a/react-app/src/components/FindJobs/app.css
+++ b/react-app/src/components/FindJobs/app.css
@@ -1,18 +1,31 @@
 .all-jobs-cont {
-    max-width: 300px;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: white; */
-    margin-top: 20px;
-    background-color: #4361ee;
-    padding: 10px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
 }
-.all-jobs-cont p {
-    color: white;
+.jobs-btns {
+    /* background-color: #4361ee; */
+    width: 50%;
+    margin: auto;
+    margin-top: 20px;
+    /* justify-content: flex; */
+    display: flex;
+    justify-content: space-evenly;
+}
+.jobs-btns button {
+    width: 100px;
     font-size: 10px;
-    font-weight: 500;
-
+    letter-spacing: 1px;
+    height: 20px;
+    border: none;
+    cursor: pointer;
+}
+.clicked {
+    color: #4361ee;
+    /* background-color: #4362ee1c; */
+    background-color: transparent;
+}
+.notClicked {
+    background-color: #4361ee;
+    color: white;
 }
