--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -26,17 +26,20 @@ nav {
 .connect-btn {
   margin-right: 9px;
   border: none;
-  padding-right: 10px;
+  /* padding-right: 10px;
   padding-left: 10px;
   padding-top: 3px;
-  padding-bottom: 3px;
+  padding-bottom: 3px; */
+  padding: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color:#4361ee ;
-  font-size: 12px;
+  font-size: 11px;
   border-radius: 3px;
   color: white;
+  letter-spacing: 1px;
+  cursor: pointer;
 
 
 }
