--- a/react-app/src/components/InterviewForm/app.css
+++ b/react-app/src/components/InterviewForm/app.css
@@ -54,7 +54,7 @@
     width: 150px;
     margin-left: 10px;
     height: 16px;
-    background-color: #caf0f863;
+    background-color: #4362ee1c;
     border: none;
     border: 0.5px solid rgba(0, 0, 0, 0.174);
     border-radius: 2px;
@@ -89,9 +89,10 @@
     height: 16px;
     letter-spacing: 1px;
     font-size: 10px;
-    background-color: #caf0f863;
+    background-color: #4362ee1c;
     border: 0.5px solid rgba(0, 0, 0, 0.174);
-    border-radius: 2px; 
+    border-radius: 2px;
+    outline: none; 
 }
 .cre-int-status-cont select{
     width: 150px;
@@ -99,9 +100,10 @@
     height: 16px;
     letter-spacing: 1px;
     font-size: 10px;
-    background-color: #caf0f863;
+    background-color: #4362ee1c;
     border: 0.5px solid rgba(0, 0, 0, 0.174);
     border-radius: 2px;
+    outline: none;
     
 }
 .cre-int-date-cont{
@@ -119,7 +121,7 @@
     width: 150px;
     margin-left: 10px;
     height: 16px;
-    background-color: #caf0f863;
+    background-color: #4362ee1c;
     border: none;
     border: 0.5px solid rgba(0, 0, 0, 0.174);
     border-radius: 2px;
