--- a/react-app/src/components/AllFavoriteList/app.css
+++ b/react-app/src/components/AllFavoriteList/app.css
@@ -1,4 +1,4 @@
-.all-jobs-cont {
+#all-fav-cont {
     max-width: 300px;
     margin: auto;
     display: flex;
@@ -10,7 +10,7 @@
     padding: 10px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-.all-jobs-cont p {
+#all-fav-cont p {
     color: white;
     font-size: 10px;
     font-weight: 500;
