--- a/react-app/src/components/FullstackJobs/app.css
+++ b/react-app/src/components/FullstackJobs/app.css
@@ -1,7 +1,7 @@
 .allJobs-main-cont {
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 15px;
     margin-right: 15px;
     margin-left: 15px;
@@ -24,7 +24,7 @@
 .allJobs-single-cont:hover p {
     color: #4361ee;
 }
-.allJobs-single-cont:hover button {
+#allJobs-btns:hover button {
     background-color: #4361ee;
     color: white;
 }
@@ -53,15 +53,16 @@
     margin-bottom: 5px;
 
 }
-.allJobs-btns {
+#allJobs-btns {
     display: flex;
     justify-content: space-between;
     width: 90%;
     margin: auto;
     margin-top: 15px;
+    /* background-color: red; */
 
 }
-.allJobs-btns button {
+#allJobs-btns button {
     /* width: 100px; */
     height: 25px;
     background-color: rgba(128, 128, 128, 0.205);
@@ -76,10 +77,11 @@
     color: rgb(100, 98, 98);
     /* color: black; */
 
-    font-size: 10px;
+    font-size: 9px;
     letter-spacing: 1px;
-    padding: 5px;
+    padding: 3px;
     font-weight: 500;
     /* border: none; */
     border-radius: 3px;
+    /* background-color: red; */
 }
