--- a/react-app/src/components/UserProfile/app.css
+++ b/react-app/src/components/UserProfile/app.css
@@ -14,6 +14,7 @@
     /* background-color: blue; */
     flex: 1;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     padding: 1em;
     background-color: white;
@@ -27,16 +28,36 @@
     width: 80px;
     letter-spacing: 1px;
     font-size: 0.8em;
+    color: #4361ee;
+    font-weight: 500;
+    text-align: center;
 }
 .user-profile-info div {
     padding: 1em;
 }
 .user-profile-info input  {
     background-color: #4362ee1c;
-    padding: 0.3em;
+    padding: 0.4em;
     border: none;
     outline-color: #4361ee;
+    height: 1.6rem;
+    letter-spacing: 1px;
 }
+.user-profile-info textarea {
+    background-color: #4362ee1c;
+    padding: 0.4em;
+    border: none;
+    outline-color: #4361ee;
+    height: 1.6rem;
+    letter-spacing: 1px;
+    height: 40px;
+    width: 200px;
+    vertical-align: middle;
+}
+.user-bio-label {
+
+}
+
 
 
 
@@ -49,7 +70,7 @@
     padding-left: 10px;
     padding-top: 3px;
     padding-bottom: 3px; */
-    padding: 1em;
+    padding: 0.5em;
     /* display: flex;
     justify-content: center; */
     align-items: center;
@@ -61,9 +82,26 @@
     cursor: pointer;
     transition: .3s;
     font-weight: 600;
+    /* height: 25px; */
 }
 .user-info-edit-btn:hover {
     background-color: #06d6a0;
     color: white;
     
+}
+
+@media screen and (max-width:853px)  {
+    #user-profile {
+        /* background-color: red; */
+    }
+    .user-profile-info {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .user-profile-info label {
+        text-align: start;
+    }
+    .user-profile-info textarea {
+        width: 150px;
+    }
 }
