--- a/react-app/src/components/FullstackJobs/app.css
+++ b/react-app/src/components/FullstackJobs/app.css
@@ -17,7 +17,7 @@
     cursor: pointer;
     /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
 }
-.allJobs-single-cont:hover {
+/* .allJobs-single-cont:hover {
     transform: scale(1.1);
     box-shadow: none;
 }
@@ -27,7 +27,7 @@
 #allJobs-btns:hover button {
     background-color: #4361ee;
     color: white;
-}
+} */
 .single-job-title p {
     font-size: 14px;
     letter-spacing: 1px;
@@ -56,7 +56,7 @@
 #allJobs-btns {
     display: flex;
     justify-content: space-between;
-    width: 90%;
+    width: 50%;
     margin: auto;
     margin-top: 15px;
     /* background-color: red; */
@@ -69,7 +69,8 @@
     transition: .5s;
     /* background-color: #4361ee; */
     background-color: transparent;
-    border: 1px solid #4361ee;
+    /* border: 1px solid #4361ee; */
+    border: none;
     cursor: pointer;
     
     /* color: white; */
@@ -77,7 +78,7 @@
     color: rgb(100, 98, 98);
     /* color: black; */
 
-    font-size: 9px;
+    font-size: 12px;
     letter-spacing: 1px;
     padding: 3px;
     font-weight: 500;
