--- a/react-app/src/components/PythonJobs/app.css
+++ b/react-app/src/components/PythonJobs/app.css
@@ -17,17 +17,17 @@
     cursor: pointer;
     /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
 }
-.allJobs-single-cont:hover {
+/* .allJobs-single-cont:hover {
     transform: scale(1.1);
     box-shadow: none;
-}
+} */
 .allJobs-single-cont:hover p {
     color: #4361ee;
 }
-.allJobs-single-cont:hover button {
+/* .allJobs-single-cont:hover button {
     background-color: #4361ee;
     color: white;
-}
+} */
 .single-job-title p {
     font-size: 14px;
     letter-spacing: 1px;
@@ -61,14 +61,14 @@
     margin-top: 15px;
 
 }
-.allJobs-btns button {
+#allJobs-btns button {
     /* width: 100px; */
     height: 25px;
     background-color: rgba(128, 128, 128, 0.205);
     transition: .5s;
     /* background-color: #4361ee; */
     background-color: transparent;
-    border: 1px solid #4361ee;
+    /* border: 1px solid #4361ee; */
     cursor: pointer;
     
     /* color: white; */
@@ -76,10 +76,16 @@
     color: rgb(100, 98, 98);
     /* color: black; */
 
-    font-size: 10px;
+    font-size: 15px;
     letter-spacing: 1px;
     padding: 5px;
-    font-weight: 500;
+    /* font-weight: 500; */
     /* border: none; */
     border-radius: 3px;
+    /* background-color: red; */
 }
+#allJobs-btns button:hover {
+    transform: scale(1.4);
+    color: #4361ee;
+}
+
