--- a/react-app/src/components/Stats/app.css
+++ b/react-app/src/components/Stats/app.css
@@ -102,3 +102,63 @@ margin-bottom: 16px;
     border-bottom: 2px solid #d66a6a;
     border-radius: 3px;
 }
+.calander-container {
+    background-color: white;
+    padding: 5px;
+    width: 650px;
+    height: 558px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 1;
+}
+/* :root {
+    background-color: none;
+} */
+.calander {
+    /* background-color: white; */
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    width: 600px;
+    height: 508;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+.add-event-btn {
+    position: absolute;
+    bottom: 45px;
+    right: 65px;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: #6a82d8;
+    color: white;
+    border: none;
+    font-weight: 600;
+    font-size: 18px;
+    padding-top: 3px;
+    z-index: 100;
+    transition: .3s;
+    border: 2px solid white;
+}
+.add-event-btn:hover {
+    background-color: white;
+    border-color: #6a82d8;
+    cursor: pointer;
+    color: #6a82d8;
+    font-size: 25px;
+    transform: scale(1.3);
+    /* right: 45px; */
+}
+.my-calendar {
+  background-color: lightblue; /* Change the background color here */
+}
+
+
+
+
+
+
+
+
