--- a/react-app/src/components/Stats/app.css
+++ b/react-app/src/components/Stats/app.css
@@ -10,7 +10,7 @@
 .stats-card-main-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    background-color: red;
+    /* background-color: red; */
     /* background-color: red; */
     gap: 20px;
 }
@@ -103,10 +103,11 @@ margin-bottom: 16px;
     border-bottom: 2px solid #d66a6a;
     border-radius: 3px;
 }
-.calander-container, .stats__sub {
+.calander-container {
     display: grid;
     grid-template-columns: 1fr;
-    background-color: white;
+    /* background-color: #4362ee1c; */
+    background-color: transparent;
     padding: 5px;
     width: 900px;
     height: 700px;
@@ -114,7 +115,16 @@ margin-bottom: 16px;
     margin-bottom: 20px;
     position: relative;
     z-index: 1;
+    /* background-color: blue; */
 }
+.calander-container {
+    /* background-color: teal; */
+    background-color: white;
+}
+:root {
+    --fc-border-color: black;
+    --fc-daygrid-event-dot-width: 5px;
+  }
 /* :root {
     background-color: none;
 } */
@@ -128,48 +138,137 @@ margin-bottom: 16px;
     margin-top: 10px;
     margin-left: 10px;
 }
+.graph-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    /* background-color: #4362ee1c; */
+    background-color: transparent;
+    /* padding: 5px; */
+    width: 890px;
+    height: 700px;
+    margin-top: 16px;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 1;
+    background-color:white;
+}
 .add-event-btn {
     position: absolute;
     bottom: 45px;
     right: 35px;
     width: 35px;
     height: 35px;
+    transition: .3s;
+/* background-color: teal;  */
+height: 120px; 
+display: flex;
+flex-direction: column;
+}
+.add-int-stat {
     border-radius: 50%;
-    background-color: #6a82d8;
-    color: white;
+    /* background-color: #6a82d8; */
+    /* background-color: red; */
+
+    /* color: white; */
+    /* color: red; */
     border: none;
+    width: 40px;
+    height: 40px;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 20px;
     padding-top: 3px;
     z-index: 100;
     transition: .3s;
-    border: 2px solid white;
+    /* border: 2px solid white; */
+    
+    color: #8338ec;
 }
-.add-event-btn:hover {
-    background-color: white;
-    border-color: #6a82d8;
+.add-int-stat:hover{
+    /* background-color: white; */
+    /* border-color: #6a82d8; */
     cursor: pointer;
-    color: #6a82d8;
-    font-size: 25px;
+    /* color: #6a82d8; */
+    /* font-size: 25px; */
     transform: scale(1.3);
+    color: #7ae582;
     /* right: 45px; */
+}
+#fav-stat-button {
+    background-color: transparent;
+    border: none;
+    font-size: 26px;
+    transition: .3s;
+    /* background-color: red; */
+    height: 34px;
+}
+.stats-fav {
+    /* border: 1px solid red; */
+    font-size: 37px;
+    transition: .3s;
+    /* background-color:#6a82d8 ; */
+    color: #8338ec;
+}
+.stats-fav:hover {
+    transform: scale(1.3);
+    cursor: pointer;
+    color: #7ae582;
+}
+.stat-dash-icon {
+    border: none;
+    width: 37px;
+    height: 37px;
+    font-weight: 600;
+    font-size: 20px;
+    padding-top: 3px;
+    z-index: 100;
+    transition: .3s;
+    color: #8338ec;
+}
+.stat-dash-icon:hover {
+    transform: scale(1.3);
+    cursor: pointer;
+    color: #7ae582;
+}
+/* #fav-stat-button:hover {
+    transform: scale(1.3);
+    font-size: 30px;
+    cursor: pointer;
+} */
+#selected {
+    color: #7ae582;
 }
 .my-calendar {
   background-color: lightblue; /* Change the background color here */
 }
 .main-stats-btm {
     /* background-color: red; */
-    background-color: green;
+    /* background-color: green; */
+    background-color: transparent;
     flex-direction: row;
     display: flex;
-    /* gap: 20px; */
+    gap: 10px;
     justify-content: space-around;
+    margin: auto;
    
     
 }
 .right-side-main {
-    background-color: pink;
+    display: grid;
+    grid-template-columns: 1fr;
+    /* background-color: #4362ee1c; */
+    background-color: transparent;
+    padding: 5px;
+    width: 900px;
+    height: 700px;
+    /* margin-top: 20px; */
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 1;
     /* width: 90%; */
+}
+.stats-main-container {
+    /* background-color: green; */
+    width: 90%;
 }
 
 
