--- a/react-app/src/components/InterviewForm/app.css
+++ b/react-app/src/components/InterviewForm/app.css
@@ -1,14 +1,27 @@
 
 .cre-int-cont {
-    display: grid;
+    /* display: grid; */
     margin-top: 10px;
     margin-right: 40px;
     margin-left: 40px;
+    max-width:900px;
 
-    /* background-color: red; */
+    background-color: red;
     box-sizing: border-box;
     background-color: white;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    margin: auto;
+    /* justify-content: center; */
+    margin-top: 100px;
+    height: 400px;
+    border-radius: 5px;
+    border-bottom: 4px solid #4361ee;
+}
+.cre-int-form {
+    /* background-color: teal; */
+    width: 80%;
+    margin: auto;
+    margin-top: 30px;
 }
 
 .cre-int-heading {
@@ -19,20 +32,30 @@
 }
 .cre-int-heading p{
     /* background-color: yellow; */
-    width: 140px;
+    /* width: 140px; */
     /* margin: auto; */
     letter-spacing: 1px;
+    /* font-weight: 400; */
 
-    margin-top: 20px;
-    margin-left: 6px;
-    padding: 5px;
+    /* margin-top: 20px; */
+    /* margin-left: 6px; */
+    padding: 6px;
+    height: 40px;
+    background-color: #4361ee;
     font-size:
-     16px;
+     22px;
      /* font-weight: 700; */
      /* text-align: center; */
-     color: black;
+     color: white;
+     font-weight: 400;
+     display: flex;
+     /* justify-content: center; */
+     align-items: center;
+     
      /* background-color: #4361ee; */
      /* border-radius: 3px; */
+     border-top-left-radius: 5px;
+     border-top-right-radius: 5px;
 }
 .cre-int-form-cont {
     display: grid;
@@ -47,13 +70,13 @@
 }
 .cre-int-pos-cont label {
     margin-left: 10px;
-    font-size: 10px;
+    font-size: 13px;
     margin-bottom: 5px;
 }
 .cre-int-cont input {
     width: 150px;
     margin-left: 10px;
-    height: 16px;
+    height: 20px;
     background-color: #4362ee1c;
     border: none;
     border: 0.5px solid rgba(0, 0, 0, 0.174);
@@ -79,21 +102,21 @@
     letter-spacing: 1px;  
 }
 .cre-int-type-cont label {
-    margin-left: 10px;
-    font-size: 10px;
+    margin-left: 13px;
+    font-size: 13px;
     margin-bottom: 5px;
 }
 .cre-int-status-cont label {
-    margin-left: 10px;
-    font-size: 10px;
+    margin-left: 13px;
+    font-size: 13px;
     margin-bottom: 5px;
 }
 .cre-int-type-cont select{
     width: 150px;
     margin-left: 10px;
-    height: 16px;
+    height: 20px;
     letter-spacing: 1px;
-    font-size: 10px;
+    font-size: 12px;
     background-color: #4362ee1c;
     border: 0.5px solid rgba(0, 0, 0, 0.174);
     border-radius: 2px;
@@ -102,9 +125,9 @@
 .cre-int-status-cont select{
     width: 150px;
     margin-left: 10px;
-    height: 16px;
+    height: 20px;
     letter-spacing: 1px;
-    font-size: 10px;
+    font-size: 12px;
     background-color: #4362ee1c;
     border: 0.5px solid rgba(0, 0, 0, 0.174);
     border-radius: 2px;
@@ -119,18 +142,18 @@
 }
 .cre-int-date-cont label {
     margin-left: 10px;
-    font-size: 10px;
+    font-size: 13px;
     margin-bottom: 5px;
 }
 .cre-int-date-cont input{
     width: 150px;
     margin-left: 10px;
-    height: 16px;
+    height: 20px;
     background-color: #4362ee1c;
     border: none;
     border: 0.5px solid rgba(0, 0, 0, 0.174);
     border-radius: 2px;
-    font-size: 10px;
+    font-size: 12px;
     
 
 }
@@ -144,8 +167,8 @@
     width: 150px;
     background-color: #4361ee;
     border: none;
-    height: 16px;
-    font-size: 10px;
+    height: 25px;
+    font-size: 13px;
     font-weight: 500;
     color: white;
     border-radius: 3px;
@@ -160,7 +183,9 @@
     width: 150px;
 }
 .cre-int-err-cont p {
-    font-size: 10px;
+    font-size: 12px;
+    width: 80%;
+    width: 300px;
 
 }
 .cre-int-cont input:hover {
