--- a/react-app/src/components/AllInterviewContainer/app.css
+++ b/react-app/src/components/AllInterviewContainer/app.css
@@ -141,7 +141,7 @@
     background-color:#5dc847 ;
     height: 21px;
     /* background-color: #4361ee; */
-    background-color: teal;
+    /* background-color: teal; */
     font-size: 12px;
     width: 40px ;
     padding: 1px;
