--- a/react-app/src/components/AllInterviewContainer/app.css
+++ b/react-app/src/components/AllInterviewContainer/app.css
@@ -23,6 +23,7 @@
     height: 180px;
     margin-left: 10px;
     padding: 3px;
+    
 }
 .allInt-top-cont {
     /* background-color: yellow; */
@@ -134,8 +135,17 @@
     width: 40px ;
     padding: 1px;
     margin-bottom: 1px;
+    border: 1px solid white;
     color: white;
+    transition: .3s;
     
+
+}
+.allInt-btns-more:hover {
+    background-color: white;
+    color: #4361ee;
+    border: 1px solid #4361ee;
+    cursor: pointer;
 
 }
 
@@ -149,10 +159,26 @@
     padding: 1px;
     margin-bottom: 1px;
     color: white;
+    border: 1px solid white;
+    transition: .3s;
+}
+.allInt-edit-btn:hover {
+    background-color: white;
+    color: #5dc847;
+    border: 1px solid #5dc847;
+    cursor: pointer;
 }
 .allInt-del-btn {
     background-color: #ee6055;
+    border: 1px solid white;
+    color: white;
+    transition: .3s;
     
+}
+.allInt-del-btn:hover {
+    /* background-color: white;
+    color: #ee6055;
+    border: 1px solid #ee6055; */
 }
 .allInt-btm-right-container {
     /* background-color: yellow; */
@@ -172,8 +198,8 @@
 }
 .allInt-Scheduled {
     background-color: #a2d2ff;
-    font-size: 12px;
-    width: 75px;
+    font-size: 13px;
+    width: 105px;
     padding: 3px;
     border-radius: 2px;
     margin-top: 5px;
