--- a/react-app/src/components/FindJobs/app.css
+++ b/react-app/src/components/FindJobs/app.css
@@ -13,18 +13,28 @@
     justify-content: space-evenly;
 }
 .jobs-btns button {
-    width: 100px;
-    font-size: 10px;
+    width: 130px;
+    font-size: 13px;
     letter-spacing: 1px;
     height: 20px;
     border: none;
     cursor: pointer;
+    padding: 2px;
+    border: 2px solid transparent;
     /* background-color: red; */
+    transition: .3s;
+}
+.jobs-btns button:hover {
+    background-color: transparent;
+    color: #4361ee;
+    border: 2px solid #4361ee;
+
 }
 .clicked {
+    background-color: transparent;
     color: #4361ee;
     /* background-color: #4362ee1c; */
-    background-color: transparent;
+    border: 2px solid #4361ee;
 }
 .notClicked {
     background-color: #4361ee;
