--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -39,17 +39,34 @@ nav {
   justify-content: center;
   align-items: center;
   background-color:#4361ee ;
-  font-size: 11px;
+  font-size: 13px;
   border-radius: 3px;
   color: white;
   letter-spacing: 1px;
   cursor: pointer;
+  border: 2px solid white;
+  transition: .3s;
 
 
+}
+.connect-icon {
+  margin-right: 2px;
+}
+.connect-btn:hover {
+  background-color: white;
+  color: #4361ee;
+  border-color: #4361ee;
+}
+
+.connect-btn:hover.connect-icon {
+  background-color: white;
+  color: #4361ee;
+  /* border-color: #4361ee; */
 }
 .connect-navlink {
   text-decoration: none;
 }
+.connect-icon
 .connect-btn-conta span {
   margin-right: 4px;
   /* margin-bottom: -6px; */
