--- a/react-app/src/components/UserProfile/app.css
+++ b/react-app/src/components/UserProfile/app.css
@@ -2,6 +2,8 @@
     /* background-color: red; */
     display: flex;
     width: 70vw;
+    /* height: inherit; */
+    height: 500px;
     flex-direction: column;
     margin: auto;
     margin-top: 20px;
@@ -11,13 +13,14 @@
     /* justify-content: space-around; */
 }
 .user-profile-info {
-    /* background-color: blue; */
     flex: 1;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     padding: 1em;
     background-color: white;
+    /* background-color: blue; */
+    height: 190px;
     border-radius: 5px;
     border-bottom: 2px solid #4361ee;
 
@@ -48,10 +51,10 @@
     padding: 0.4em;
     border: none;
     outline-color: #4361ee;
-    height: 1.6rem;
+    /* height: 3rem; */
     letter-spacing: 1px;
-    height: 40px;
-    width: 200px;
+    height: 70px;
+    width: 350px;
     vertical-align: middle;
 }
 .user-bio-label {
